todoyu timetracking changelog

timetracking 1.2.0 - not released yet
	* Bugfix: More than 999% tracked breaks line out of tracking headlet
	* Added: Person filter widgets: has tracked time in project, tracked time for customer
	* Added: Show info about chargeable workload in track in the tracks list

timetracking 1.1.4 - not released yet
	* Changed: made also status "rejected" and "waiting" trackable
	* Changed: on starting timetracking, task status is always updated to "in progress"
	* Added: Starting first tracking of task of person in current day immediately stores a 0:00 track, visible for other persons as well (was previously stored not until stopping the tracking) 
	* Bugfix: Progress bar inside timetracking headlet was not updated in realtime

timetracking 1.1.3 - 2011-12-13
	* Bugfix: Sub tasks were marked as running too
	* Added: TimetrackingProject (+Manager)
	* Added: TimetrackingTaskPreset (+Manager)
	* Added: ext_timetracking_workload_done to task preset
	* Changed: Used task type differentiated task tabs registration, incremented project dependency to 1.3.0
	* Changed: Renamed TodoyuTimetrackingSysmanagerRenderer => TodoyuTimetrackingSysmanagerManager
	* Changed: Task preset DB rename of start_tracking => ext_timetracking_start_tracking

timetracking 1.1.2 - 2011-11-17
	* Changed: Timetracking does not add anymore contextmenu items to deleted tasks
	* Changed: Don't hide open timetracking headlet when tracking is active
	* Translation: Polish

timetracking 1.1.1 - 2011-09-15
	* Bugfix: Spelling mistake in rights (track - editOwn, editOwnChargeable)
	* Added: Hooks: timetracking.start, timetracking.stop
	* Changed: Timetracking icon (changed from alarm clock to stopwatch)
	* Changed: Add field for task presets directly to the fieldset quicktaskSpecific
	* Changed: Adapted registered hooks due rename in project extension

timetracking 1.1.0 - 2011-06-17
	* Feature: Extended task CSV export with tracked time sum