@@ -1,9 +1,9 @@
 <li class="tracking">
 	<div class="taskDetails">
-		<a href="javascript:void(0)" onclick="Todoyu.Ext.project.goToTaskInProject(0,{$task.project.id})" title="{Label LLL:timetracking.ext.jumpToProject}" class="project">
+		<a href="javascript:void(0)" onclick="Todoyu.Ext.timetracking.Task.goToTask({$task.project.id}, 0, true)" title="{Label LLL:timetracking.ext.jumpToProject}" class="project">
 			{htmlencode(truncate($task.company.shortname, 25))}: {htmlencode(truncate($task.project.title, 40))}
 		</a>
-		<a href="javascript:void(0)" onclick="Todoyu.Ext.project.goToTaskInProject({$task.id})" title="{htmlencode $task.title}" class="title">
+		<a href="javascript:void(0)" onclick="Todoyu.Ext.timetracking.Task.goToTask({$task.project.id}, {$task.id}, true)" title="{htmlencode $task.title}" class="title">
 			{$task.id_project}.{$task.tasknumber}: <strong>{htmlencode(truncate($task.title, 37, '...', true))}</strong>
 		</a>
 	</div>
